Rename repository from docorama to docomatic-mcp-service
Updates all references to the repository name throughout the codebase:
- README.md: GitHub URLs and clone instructions
- AGENTS.md: Directory structure references
- docker-compose.yml: Environment variable name (DOCORAMA_SERVICE_PORT -> DOCOMATIC_SERVICE_PORT)
- http_api.py: Comment references
- Git remote URL updated to match new repository name
- Directory renamed from docorama/ to docomatic-mcp-service/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     container_name: doc-o-matic
     restart: unless-stopped
     ports:
-      - "${DOCORAMA_SERVICE_PORT:-8005}:8005"
+      - "${DOCOMATIC_SERVICE_PORT:-8005}:8005"
     environment:
       # Database configuration - PostgreSQL connection string
       - DATABASE_URL=${DATABASE_URL:-postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgresql:5432/${POSTGRES_DB:-docomatic}}
