Remove PostgreSQL, use SQLite exclusively and update data storage
- Remove PostgreSQL service from docker-compose.yml
- Update to use SQLite with /var/data/june/docomatic-mcp-service/data/
- Remove postgresql-client from Dockerfile
- Update .gitignore to remove data-related entries
- Update DATABASE_URL defaults to SQLite

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,8 @@ dist/
 build/
 *.egg
 
-# Data
-data/
-backups/
-*.db
-*.db-shm
-*.db-wal
+# Data files are stored in /var/data/june/docomatic-mcp-service/
+# No need to ignore them here
 
 # IDE
 .vscode/
