--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "${DOCOMATIC_SERVICE_PORT:-8005}:8005"
     environment:
       # Database configuration - SQLite
-      - DATABASE_URL=${DATABASE_URL:-sqlite:///./data/docomatic.db}
+      - DATABASE_URL=${DATABASE_URL:-sqlite:////data/docomatic.db}
       - DB_POOL_SIZE=${DB_POOL_SIZE:-5}
       - DB_MAX_OVERFLOW=${DB_MAX_OVERFLOW:-10}
       - SQL_ECHO=${SQL_ECHO:-false}
@@ -19,7 +19,8 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     volumes:
       # Data volume for SQLite database and other persistent data
-      - /var/data/june/docomatic-mcp-service/data:/app/data
+      - /var/data/june/docomatic-mcp-service:/data
+      - /var/log/june/docomatic-mcp-service:/logs
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:8005/health"]
       interval: 30s
@@ -35,11 +36,13 @@ services:
           cpus: '${DOC_O_MATIC_CPU_RESERVATION:-0.25}'
           memory: ${DOC_O_MATIC_MEMORY_RESERVATION:-128M}
     networks:
-      - doc-o-matic-network
+      - shared-network
 
 # Volumes are now using host paths in /var/data/june/docomatic-mcp-service/
 # No named volumes needed
 
 networks:
-  doc-o-matic-network:
-    driver: bridge
+  # External network for shared infrastructure
+  shared-network:
+    external: true
+    name: shared_network
